--- a/Presentation/AtiehJobCore.Web/AtiehJobCore.Web.csproj
+++ b/Presentation/AtiehJobCore.Web/AtiehJobCore.Web.csproj
@@ -834,6 +834,8 @@
     <PackageReference Include="ElmahCore" Version="1.2.3" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="2.10.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="2.10.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.1" />
     <PackageReference Include="DNTBreadCrumb.Core" Version="1.7.2" />
     <PackageReference Include="DNTCommon.Web.Core" Version="1.3.3" />
